--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
   "homepage": "https://github.com/elviobg/nodejs-curso-manguinho#readme",
   "devDependencies": {
     "@types/node": "^18.7.23",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "eslint": "^8.24.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
     "git-commit-msg-linter": "^4.2.1",
+    "husky": "^8.0.1",
     "typescript": "^4.8.4"
   }
 }
