--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Repositório para adicionas os códigos feitos durante o curso NodeJs, Typescript, TDD, DDD, Clean Architecture e SOLID do Rodrigo Manguinho na Udemy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:staged": "jest",
+    "lint:fix": "eslint 'src/**' --fix"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   },
   "homepage": "https://github.com/elviobg/nodejs-curso-manguinho#readme",
   "devDependencies": {
+    "@types/jest": "^29.1.0",
     "@types/node": "^18.7.23",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "eslint": "^8.24.0",
@@ -27,7 +30,9 @@
     "eslint-plugin-promise": "^6.0.1",
     "git-commit-msg-linter": "^4.2.1",
     "husky": "^8.0.1",
+    "jest": "^29.1.1",
     "lint-staged": "^13.0.3",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
 }
