--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "allowJs": true,
     "strictNullChecks": true
   },
-  "include": ["./**/*"],
-  "exclude": ["node_modules", "**/dist/**"]
+  "include": ["./src/**/*", "jest.config.js"],
+  "exclude": ["node_modules", "./dist/**"]
 }
