--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/jest": "^29.1.0",
     "@types/node": "^18.7.23",
+    "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "eslint": "^8.24.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -38,5 +39,8 @@
     "lint-staged": "^13.0.3",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
