--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Repositório para adicionas os códigos feitos durante o curso NodeJs, Typescript, TDD, DDD, Clean Architecture e SOLID do Rodrigo Manguinho na Udemy",
   "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTests --runInBand  --silent",
+    "test": "jest --passWithNoTests --runInBand  --silent --detectOpenHandles",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit.config.js",
     "test:integration": "npm test -- --watch -c jest-integration.config.js",
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/elviobg/nodejs-curso-manguinho#readme",
   "devDependencies": {
+    "@shelf/jest-mongodb": "1.2.1",
+    "@types/mongodb": "3.6.3",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.1.0",
     "@types/node": "^18.7.23",
@@ -43,6 +45,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "mongodb": "3.6.3",
     "validator": "^13.7.0"
   }
 }
