--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Repositório para adicionas os códigos feitos durante o curso NodeJs, Typescript, TDD, DDD, Clean Architecture e SOLID do Rodrigo Manguinho na Udemy",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --runInBand  --silent --detectOpenHandles",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit.config.js",
@@ -25,9 +26,9 @@
   "homepage": "https://github.com/elviobg/nodejs-curso-manguinho#readme",
   "devDependencies": {
     "@shelf/jest-mongodb": "1.2.1",
-    "@types/mongodb": "3.6.3",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.1.0",
+    "@types/mongodb": "3.6.3",
     "@types/node": "^18.7.23",
     "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
@@ -40,11 +41,13 @@
     "husky": "^8.0.1",
     "jest": "^29.1.1",
     "lint-staged": "^13.0.3",
+    "sucrase": "^3.28.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
     "mongodb": "3.6.3",
     "validator": "^13.7.0"
   }
