--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^29.1.0",
     "@types/mongodb": "3.6.3",
     "@types/node": "^18.7.23",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "eslint": "^8.24.0",
@@ -42,6 +43,7 @@
     "jest": "^29.1.1",
     "lint-staged": "^13.0.3",
     "sucrase": "^3.28.0",
+    "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
